// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorBlock.vue renders correctly (preview mode) 1`] = `
<div class="block" preview="true">
  <div class="wrapper paragraph" articleid="" iframelyapikey="" uploadendpoint="" axiosconfig="[object Object]">
    <div contenteditable="true" class="target paragraph">
      <p>foo</p>
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`EditorBlock.vue renders correctly 1`] = `
<div class="block">
  <div class="wrapper paragraph" articleid="" iframelyapikey="" uploadendpoint="" axiosconfig="[object Object]">
    <div contenteditable="true" class="target paragraph">
      <p>foo</p>
    </div>
    <!---->
  </div>
  <!---->
</div>
`;
